test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_27.k
schema Person[name: str]:
    name: str = name
